# hotel-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  config.yaml  docker-compose.yml  main.py  main_local.py  pyproject.toml  skills-lock.json
.railway/: README.md  package-lock.json  package.json  railway.ts
alembic/: env.py
alembic/versions/: 20260101_0000_initial_schema.py  20260102_0001_channel_sessions.py  20260710_1230_2c284d7b10f3_initial_src_schema.py  20260710_1230_2c284d7b10f3_initial_src_v2_schema.py  20260710_1445_f5d614d8fceb_add_forwarded_emails.py  20260712_1500_a1b2c3d4e5f6_add_outbound_emails.py  20260717_1430_7c8d9e0f1a2b_add_states.py  20260719_1730_9d0e1f2a3b4c_add_scheduled_tasks.py
docs/: agent.md  architecture.md  deployment.md  development.md  ops.md
experiments/: flightapi_test.py  mailtrap_test.py  parse_data.py
ideas/: telegram-proposal-0.1.md  telegram-proposal-0.2.md  telegram.md
infra/temporal-ui-proxy/: Caddyfile  Dockerfile
openspec/: config.yaml  project.md
scripts/: README.md  __init__.py  classifier.py  collect_corpus.py  corpus_writer.py  docker-entrypoint.sh  forward.py  generate_mailtrap_client.py  gmail_source.py  railway-bootstrap.sh  selector.py  types.py
src/: config.py  context.py  llm.py  logging.py
src/agent/: __init__.py  agent.py  compaction.py  context.py  middleware.py  prompts.py  state.py  stream.py  summarization.py  tracing.py  types.py  utils.py
src/app/: dependencies.py  factory.py  webhook.py
src/bot/: app.py  core.py  templates.py  utils.py
src/db/: base.py  models.py  repositories.py  session.py  types.py
src/domain/: __init__.py  application.py  entities.py  enums.py  errors.py  events.py  extraction.py  ids.py  intents.py  ports.py
src/infrastructure/: __init__.py  config.py  identity.py  logging.py
src/presentation/: __init__.py  api.py  app.py  container.py  local_debug.py  webhooks.py
src/temporal/: activities.py  agent_runner.py  client.py  converter.py  model.py  queue.py  scheduled_turn.py  schedules.py  worker.py
src_v2/: context.py
src_v2/agent/: agent.py  context.py  exceptions.py  graph.py  middleware.py  prompts.py  state.py  stream.py  tools.py  types.py
src_v2/app/: dependencies.py  factory.py  webhook.py
tests/: conftest.py  test_context_compaction.py  test_conversation_summarization.py  test_flight_tracking.py  test_now_context.py  test_scheduling.py
(+450 files in other folders)
